add change in basket goods

--- a/src/app/components/card-item/card-item.component.html
+++ b/src/app/components/card-item/card-item.component.html
@@ -89,8 +89,4 @@
         </div>
     </section>
 </div>
-                            <!-- <li><p>Finish Storyline <span>€ 7</span></p></li>
-                            <li><p>Torghast Access  <span>€ 5</span></p></li>
-                            <li><p>Covenant campaign<span>€ 9</span></p></li>
-                            <li><p>Torghast Access  <span>€ 5</span></p></li>
-                            <li><p>Covenant campaign <span>€ 9</span></p></li> -->
+<app-alert-buy [nameCard]="card.name" [activeModal]="alertAdd"></app-alert-buy>
