--- a/src/app/components/store-basket/store-basket.component.scss
+++ b/src/app/components/store-basket/store-basket.component.scss
@@ -62,6 +62,7 @@
 .img-card{
     width: 215px;
     height: 100%;
+    
 }
 .container-parameters_basket-card{
     padding: 10px;
@@ -164,6 +165,7 @@
             position: absolute;
             top: 0;
             z-index: 2;
+            opacity: 0.5;
         }
     }
     .container-parameters_basket-card{
