--- a/src/app/ui/header/header.component.scss
+++ b/src/app/ui/header/header.component.scss
@@ -27,6 +27,24 @@ header{
         padding: 15px;
     }
 }
+.basket-goods_box{
+    position: relative;
+}
+.lenght-basket{
+    position: absolute;
+    background-color:#E5453D;
+    font-size: 15px;
+    width: 10px;
+    height: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -5px;
+    right: -10px;
+    border-radius: 100%;
+    pointer-events: none;
+}
 .search{
     display: flex;
     align-items: center;
