--- a/src/app/components/catalog/catalog.component.html
+++ b/src/app/components/catalog/catalog.component.html
@@ -13,7 +13,7 @@
         </ul>
     </div>
     <div class="text-title" *ngIf="popular">
-        <img src="../../../assets/image/fire.svg" alt="">
+        <img src="/assets/image/fire.svg" alt="">
         <h2 class="text-title">
             Most popular services
         </h2>
@@ -27,7 +27,7 @@
             <div class="info-card">
                 <div class="header-card">
                     <div class="header-card-time">
-                        <img src="../../../assets/image/Clock.svg" alt="">
+                        <img src="/assets/image/Clock.svg" alt="">
                         <p>{{catalogList.timeSalle}} hours</p>
                     </div>
                     <p 
