--- a/src/app/modules/main-page/main/main.component.html
+++ b/src/app/modules/main-page/main/main.component.html
@@ -16,17 +16,17 @@
 <section>
     <div class="container container_reviews">
         <div class="title-reviews">
-            <img src="../../../../assets/image/fi-br-star.svg" alt=""><h2>Only trusted reviews</h2>
+            <img src="/assets/image/fi-br-star.svg" alt=""><h2>Only trusted reviews</h2>
         </div>
         <div class="list_review">
             <div class="card_reviews ">
                 <div class="time-reviews">
                     <div class="image_block">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
                     </div>
                     <p>2 hours ago</p>
                 </div>
@@ -39,11 +39,11 @@
             <div class="card_reviews ">
                 <div class="time-reviews">
                     <div class="image_block">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
                     </div>
                     <p>2 hours ago</p>
                 </div>
@@ -56,11 +56,11 @@
             <div class="card_reviews ">
                 <div class="time-reviews">
                     <div class="image_block">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
                     </div>
                     <p>2 hours ago</p>
                 </div>
@@ -73,11 +73,11 @@
             <div class="card_reviews ">
                 <div class="time-reviews">
                     <div class="image_block">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
                     </div>
                     <p>2 hours ago</p>
                 </div>
@@ -90,11 +90,11 @@
             <div class="card_reviews ">
                 <div class="time-reviews">
                     <div class="image_block">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
                     </div>
                     <p>2 hours ago</p>
                 </div>
@@ -107,11 +107,11 @@
             <div class="card_reviews ">
                 <div class="time-reviews">
                     <div class="image_block">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
-                        <img src="../../../../assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
+                        <img src="/assets/image/star_review.svg" alt="">
                     </div>
                     <p>2 hours ago</p>
                 </div>
@@ -127,28 +127,28 @@
 <section>
     <div class="container">
         <div class="title-how_order">
-            <img src="../../../../assets/image/question.svg" alt="">
+            <img src="/assets/image/question.svg" alt="">
             <h2>How to place an order</h2>
         </div>
         <p class="parahraph-title-how_order">Our site nice-boost.com can help with leveling in World of Warcraft</p>
         <ul class="info-order">
             <li>
-                <img src="../../../../assets/image/HandPointing.svg" alt="">
+                <img src="/assets/image/HandPointing.svg" alt="">
                 <h2>Select a service</h2>
                 <p>Just press on boost that you would like to use</p>
             </li>
             <li>
-                <img src="../../../../assets/image/CreditCard.svg" alt="">
+                <img src="/assets/image/CreditCard.svg" alt="">
                 <h2>PAY</h2>
                 <p>You can buy our services fast and easy</p>
             </li>
             <li>
-                <img src="../../../../assets/image/PhoneCall.svg" alt="">
+                <img src="/assets/image/PhoneCall.svg" alt="">
                 <h2>Contact us</h2>
                 <p>Contact us. We are ready to help</p>
             </li>
             <li>
-                <img src="../../../../assets/image/CircleWavyCheck.svg" alt="">
+                <img src="/assets/image/CircleWavyCheck.svg" alt="">
                 <h2>GEt the service</h2>
                 <p>We will deliver the best service that you have ever seen</p>
             </li>
