inner src footer

--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -13,14 +13,14 @@
                 </ul>
             </nav>
             <div class="logotype">
-                <img src="/assets/image/logotype.svg" alt="">
+                <img src="assets/image/logotype.svg" alt="">
             </div>
             <ul class="social">
-                <li><img src="/assets/image/social/Telegram.svg" alt=""></li>
-                <li><img src="/assets/image/social/Skype.svg" alt=""></li>
-                <li><img src="/assets/image/social/Instagram.svg" alt=""></li>
-                <li><img src="/assets/image/social/Facebook.svg" alt=""></li>
-                <li><img src="/assets/image/social/discord.svg" alt=""></li>
+                <li><img src="assets/image/social/Telegram.svg" alt=""></li>
+                <li><img src="assets/image/social/Skype.svg" alt=""></li>
+                <li><img src="assets/image/social/Instagram.svg" alt=""></li>
+                <li><img src="assets/image/social/Facebook.svg" alt=""></li>
+                <li><img src="assets/image/social/discord.svg" alt=""></li>
             </ul>
         </div>
     </section>
