--- a/src/app/components/catalog/catalog.component.scss
+++ b/src/app/components/catalog/catalog.component.scss
@@ -1,8 +1,8 @@
-.paragraf{
+.paragraphs{
     background-color: #0F0F0F;
     border-radius: 11px;
 }
-.paragraf-list{
+.paragraphs-list{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -10,7 +10,7 @@
     margin: 0;
     padding:7px 18px ;
 }
-.paragraf-cards{
+.paragraphs-cards{
     cursor: pointer;
     font-size: 18px;
     display: flex;
@@ -93,7 +93,7 @@
         height: 20px;
     }
 }
-.paragrafs{
+.paragraphss{
     cursor: pointer;
 }
 .info-card{
@@ -137,7 +137,7 @@
     font-weight: 700;
     font-size: 20px;
 }
-.active_paragraf{
+.active_paragraphs{
     background: var(--linear-btn);
     color:white;
     // transition: 0.5s ease;
